<resources>
    <string name="app_name">Pekalongan City Guide</string>
    <string name="short_explain">Pekalongan is a city of Central Java, Indonesia. It was formerly the seat of Pekalongan Regency on the northern coast of the province, but is now an independent municipality within the province. The city is Central Java\'s most important port, and is known for its batik.</string>
    <string name="spotlight">Spotlight</string>
    <string name="history">History</string>
    <string name="history_txt">The coastal area around Pekalongan was part of the ancient Holing (Kalingga) kingdom. The 7th century Sojomerto inscription, discovered in neighboring Batang Regency, Central Java, is linked with Kalingga as well as the ancestor of the Sailendras.</string>
    <string name="read_more">Read more</string>
    <string name="culinary">Local Cuisines</string>
    <string name="breaking_news">Breaking News</string>
    <string name="history_header">Pekalongan City History</string>
    <string name="history_body">\t\t\t\t\tThe coastal area around Pekalongan was part of the ancient Holing (Kalingga) kingdom. The 7th century Sojomerto inscription, discovered in neighboring Batang Regency, Central Java, is linked with Kalingga as well as the ancestor of the Sailendras. The exact location of the Kalingga capital is unclear however, that it was suggested lies somewhere between Pekalongan and Jepara. However it is most likely that Kalingga was located in Pekalongan instead of Jepara, since there is similarity of names between Kalingga and Pekalongan. The name probably slightly shifted over centuries, from Kalingga, Kaling, Kalong, and later added with pe- -an circumfix forming \'Pekalongan\'.\n\n\t\t\t\t\tThe history of Pekalongan dated back to the early 12th century. A book written in 1178 by a Song dynasty official already had record of Pekalongan, then known to Chinese merchants as \'Pukalong\', it was then a seaport of Java (then known as Dvapa); the king of Java lived at Pukalong, knotted his hair at the back of his head, while his people wore short hair and wrapped their body with colorfully weaved cloth. Chinese merchant ship set sail from Canton during November, with the aid of fair wind sailed nonstop day and night, arrived at Pukalong in about one month. The people made wine from coconuts, produced very delicious red and white cane sugar, the kingdom made coins out of bronze and copper, 60 copper coins exchanged for one tael of gold. Local produces included pepper, clove, sandalwood, eaglewood and white round cardamom.\n\n  \t\t\t\t\tPekalongan became a part of the empire of the Sultanate of Mataram through treaty and marriage alliances by the early 17th century. The area was on the geographic periphery of the empire, which was based in interior central Java. However, it was a wealthy area, and by the end of the 17th century, the substantial money and produce it sent to the center made it a key part of Mataram\'s realm. The area went into economic decline during the 18th century, and the Dutch East India Company began to gain substantial influence over the area\'s political and economic life. The Dutch built a fort in the city in 1753; this fort still stands.\n\n  \t\t\t\t\tFrom the 1830s, the Pekalongan area became a major producer of sugar. Sugarcane had been grown in the area since the early 12th century, as recorded in Chinese history books, but production expanded substantially during the mid-19th century due to Dutch efforts. Initially, production was boosted through compulsory corvée labor; the Dutch colonial government took advantage of longstanding Javanese expectations that the peasantry contributes a part of their labor to the state. Between the 1860s and the 1890s, this system was phased out, and workers were paid directly. The colonial sugar industry collapsed during the Great Depression of the 1930s, but sugar remains a key export of the area in independent Indonesia.\n\n  \t\t\t\t\t\tOn October 8, 1945, an anti \'Swapraja\'/anti feudalism movement called Three Regions Movement \'Gerakan Tiga Daerah\' was established in Tegal, Pekalongan, and Brebes. The goal of this movement was to replace the blue blood regents (related to the kings from Jogyakarta and Surakarta) with ordinary people. According to the leaders of this movement, the old regents had cooperated with Japanese during World War II and sent people to the Japanese slave labor camps.  \t\t\t\t\tThe main leader of this movement was Sarjiyo who became the new regent of Pekalongan. Other leaders of this movement were Kutil, K. Mijaya, and Ir. Sakirman. Ir Sakirman was the local leader of Indonesian Communist Party (PKI).\n\n  \t\t\t\t\tThe old regents were arrested, stripped naked, and dragged into the prisons. Other government officials and police officers were kidnapped and massacred at Talang bridge. This movement also started a racial riot against ethnic Chinese in Brebes. The government of Republic of Indonesia (RI) in Jogyakarta disagree with this movement and declared it as an illegal movement.  On November 4, 1945, the movement attacked Indonesian army HQ and the regent office in Pekalongan. The rebels were defeated by Indonesian army in a fierce battle on December 21, 1945. Most leaders of this movement were arrested and thrown into the prisons. This rebellion is called Three Regions Affair.</string>
    <string name="general_info">General Info</string>
    <string name="info_body">Pekalongan Other transcription(s) :\n- Hanacaraka : ꦥꦼꦏꦭꦺꦴꦁꦔꦤ꧀\n- Pegon : ڤٓكالَوڠان  \n- Chinese : 北加隆岸  \n\nNickname\t: Kota Batik (lit. \'the Batik city\')  \n\nMotto(s)\t: Pekalongan Kota BATIK (Bersih (Clean), Aman (Safe), Tertib (Discipline), Indah (Beautiful), Komunikatif (Communicative))  \n\nMayor\t: Saelany Mahfudz  \n\nArea Total\t: 45.25 km2 (17.47 sq mi)  \n\nTotal Population per-2019\t: 307,097 \n\nDensity\t: 6,800/km2 (18,000/sq mi)  \n\nTime zone\t: UTC+7 (Western Indonesia Time)  \n\nArea code\t: (+62) 285  \n\nPost Code\t: 51100\n\nWebsite\t: pekalongankota.go.id</string>
    <string name="important_numbers">Important Numbers</string>
    <string name="numbers">Emergency Call : 112\n\nPekalongan City Police : (0285) 421692\n\nFirefighter : (0285) 435301\n\nPLN Pekalongan Office : (0285) 434785\n\nPrimary Tax Service Office : (0285) 422491\n\nBendan Hospital, Pekalongan : (0285) 437222\n\nRailway station : (0285) 421161</string>
    <string name="coat_arms_old">Coat of Arms of Pekalongan\nfrom 1930s during colonial era</string>
    <string name="coat_arms_new">City Coat of arms \n(Now)</string>
    <string name="city_flag">City Flag</string>
    <string name="culinary_header">Culinary</string>
    <string name="culinary_image">Culinary Gallery</string>
    <string name="search_hint">Search Destination</string>
    <string name="detail_header">Destination Details</string>
    <string name="bookmark_text">Bookmark Place</string>
    <string name="unbookmark_text">Remove from Bookmark</string>
    <string name="bookmark_list">Bookmark List</string>
    <string name="convo_header">Daily Conversation Examples</string>
    <string name="phrases_header">Frequent Phrases</string>
    <string name="user_txt">Username</string>
    <string name="email_txt">Email Address</string>
    <string name="time_txt">Date Joined</string>
    <string name="type_txt">User Type</string>
    <string name="logout_text">Logout</string>
    <string name="change_lang">Change Language</string>
    <string name="edit_header">Edit Profile</string>
    <string name="update_text">Update</string>
    <string name="email_hint">Enter E-mail</string>
    <string name="pass_hint">Enter Password</string>
    <string name="login_text">Login</string>
    <string name="without_text">Continue without login</string>
    <string name="donthave_text">Don\'t have any account?</string>
    <string name="toRegister_text">REGISTER NOW</string>
    <string name="regisuser_text">Enter Username</string>
    <string name="regisemail_text">Enter E-mail</string>
    <string name="regispass_text">Enter Password</string>
    <string name="regiscfmpass_text">Confirm Your Password</string>
    <string name="regisbtn_text">Register</string>
    <string name="change_password">Change Password</string>
    <string name="curr_pass">Enter Current Password</string>
    <string name="edit_pass">Enter Password</string>
    <string name="cfmeditpass">Confirm New Password</string>
    <string name="update_pass">Update</string>
    <string name="itinerary_profile">Itinerary List</string>
    <string name="show_routes">Show Routes</string>
    <string name="search_bookmark">Search Bookmark</string>
    <string name="add_to_itinerary">Add to Itinerary</string>
    <string name="select_date_iter">Select date</string>
    <string name="select_start_time_iter">Select start time</string>
    <string name="select_end_time_iter">Select end time</string>
    <string name="add_to_itinerary_btn">Add to Itinerary</string>
    <string name="search_destination_admin">Search Destination</string>
    <string name="destination_admin">Destination</string>
    <string name="category_admin">Category</string>
    <string name="detail_news">Detail News</string>
    <string name="itinerary_list_header">Itinerary List</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="edit_destination_header">Edit Destination</string>
    <string name="edit_destination_name">Destination Name</string>
    <string name="edit_destination_description">Destination Description</string>
    <string name="edit_pick_category">Pick Category</string>
    <string name="update_destination_btn">Update Destination</string>
    <string name="opening_hours_detail">Opening Hours</string>
    <string name="place_reviews_detail">Place Reviews</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>
    <string name="gpsnotEnabled">GPS not enabled</string>
    <string name="enable_gps_confirm">Would you like to enable GPS?</string>
    <string name="enter_name_edit">Enter new name</string>
    <string name="enter_cur_pass">Enter current password!</string>
    <string name="pass8chara">Password must be more than 8 characters!</string>
    <string name="pass1num">Password must contain at least one number!</string>
    <string name="pass1Symbol">Password must contain at least one symbol!</string>
    <string name="enternewPass">Enter new password!</string>
    <string name="passcantSame">Your new password cannot be the same as your current password!</string>
    <string name="cfmpassEnter">Enter confirm password!</string>
    <string name="passnotMatch">Password does not match!</string>
    <string name="pass_updated_txt">Password updated successfully</string>
    <string name="failed_update_pass">Failed to update password</string>
    <string name="failed_authentic">Failed to re-authenticate user</string>
    <string name="removed_bookmark">Removed from Bookmark</string>
    <string name="added_bookmark">Added to Bookmark</string>
    <string name="notLogin">You Are Not Logged In</string>
    <string name="select_language">Select Language</string>
    <string name="english_opt">English</string>
    <string name="indo_opt">Indonesian</string>
    <string name="no_internet">No internet connection</string>
    <string name="error_connect_database">Error connecting to the database</string>
    <string name="choose_date">Please choose a date!</string>
    <string name="sort_by">Sort By :</string>
    <string name="rating_txt">Rating</string>
    <string name="distance_txt">Distance</string>
    <string name="comment_text">Comments</string>
    <string name="submit_text">submit</string>
    <string name="cancel_opt">Cancel</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="basic_javanese_characters">Basic Javanese Characters</string>
</resources>