<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_batik"
        android:backgroundTint="@color/palette_4"
        android:backgroundTintMode="screen"
        tools:context=".Layout.MainActivity">

        <ImageView
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginemail_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/palette_2"
            app:errorEnabled="true"
            app:boxBackgroundMode="none">

            <EditText
                android:drawableTint="@color/palette_1"
                android:gravity="center_vertical"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/mail_icon"
                android:id="@+id/login_email"
                android:padding="7dp"
                android:textSize="18dp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:textColor="@color/palette_1"
                android:background="@drawable/et_style" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginpass_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/palette_2"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/palette_1"
            app:errorEnabled="true"
            app:boxBackgroundMode="none">

            <EditText
                android:drawableTint="@color/palette_1"
                android:gravity="center_vertical"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/pass_icon"
                android:id="@+id/login_pass"
                android:fontFamily="@font/poppins_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/pass_hint"
                android:textColor="@color/palette_1"
                android:padding="7dp"
                android:textSize="18dp"
                android:inputType="textPassword"
                android:background="@drawable/et_style" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/palette_4"
            android:text="@string/login_text"
            android:textSize="18dp"
            android:padding="5dp" />

        <Button
            android:id="@+id/no_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/without_text"
            android:textColor="@color/palette_4"
            android:textSize="18dp"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/palette_2"
                android:textSize="15dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/donthave_text" />

            <TextView
                android:id="@+id/main_regis"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:textColor="@color/palette_3"
                android:textSize="17dp"
                android:text="@string/toRegister_text" />
        </LinearLayout>

    </LinearLayout>
</layout>