<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="16dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/ic_launcher_background"
            android:padding="20dp">

            <TextView
                android:id="@+id/edit_dialog_title"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_comment"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginBottom="15dp"
                android:textSize="20dp"
                android:textColor="@color/palette_1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_comment_til"
                android:layout_width="match_parent"
                android:layout_below="@id/edit_dialog_title"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:boxBackgroundMode="none">
                <EditText
                    android:id="@+id/edit_comment_et"
                    android:includeFontPadding="false"
                    android:drawableTint="@color/palette_1"
                    android:drawablePadding="15dp"
                    android:background="@drawable/et_style"
                    android:drawableLeft="@drawable/comment_icon"
                    android:padding="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/comment_text" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/editcomment_btn"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:layout_below="@id/edit_comment_til"
                android:textColor="@color/palette_4"
                android:text="@string/submit_text" />
            <Button
                android:id="@+id/cancel_btn"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:layout_below="@id/editcomment_btn"
                android:textColor="@color/palette_4"
                android:text="@string/cancel_opt"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>




