<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_batik"
        android:backgroundTint="@color/palette_4"
        android:backgroundTintMode="screen"
        tools:context=".Layout.ChangePassword">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backtoProfile"
                android:layout_gravity="start"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#0000"
                android:src="@drawable/back_icon" />

            <TextView
                android:layout_marginStart="-20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/change_password"
                android:textColor="@color/palette_1"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/pass_icon"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            app:tint="@color/palette_1" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currentpass_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/palette_2"
            app:boxBackgroundMode="none"
            app:errorEnabled="true"
            app:passwordToggleTint="@color/palette_1"
            app:passwordToggleEnabled="true">
            <EditText
                android:drawableTint="@color/palette_1"
                android:gravity="center_vertical"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/pass_icon"
                android:id="@+id/curr_pass"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/curr_pass"
                android:textSize="18dp"
                android:textColor="@color/palette_1"
                android:padding="7dp"
                android:inputType="textPassword"
                android:background="@drawable/et_style" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editpass_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/palette_2"
            app:boxBackgroundMode="none"
            app:errorEnabled="true"
            app:passwordToggleTint="@color/palette_1"
            app:passwordToggleEnabled="true">

            <EditText
                android:drawableTint="@color/palette_1"
                android:gravity="center_vertical"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/pass_icon"
                android:id="@+id/edit_pass"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_pass"
                android:textSize="18dp"
                android:textColor="@color/palette_1"
                android:padding="7dp"
                android:inputType="textPassword"
                android:background="@drawable/et_style" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editcfmpass_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/palette_2"
            app:boxBackgroundMode="none"
            app:passwordToggleTint="@color/palette_1"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:drawableTint="@color/palette_1"
                android:gravity="center_vertical"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/pass_icon"
                android:id="@+id/cfmeditPass"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:layout_height="wrap_content"
                android:hint="@string/cfmeditpass"
                android:textSize="18dp"
                android:textColor="@color/palette_1"
                android:padding="7dp"
                android:inputType="textPassword"
                android:background="@drawable/et_style" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/update_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/update_text"
            android:textSize="20dp"
            android:padding="5dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/palette_4" />
    </LinearLayout>
</layout>